[tool.poetry]
name = "dislinkt-auth"
version = "0.1.0"
description = ""
authors = ["permitt <perovicmitar@gmail.com>"]

packages = [
    { include = "app" }
]


[tool.poetry.dependencies]
python = "^3.8"
coverage = "^6.4.1"
click = "^8.1.3"
colorama = "^0.4.5"
Flask = "^2.1.2"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
PyJWT = "^2.4.0"
kafka-python = "^2.0.2"
pytest = "^7.1.2"
MarkupSafe = "^2.1.1"
pymongo = "^4.1.1"
Werkzeug = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
